--- a/styles.css
+++ b/styles.css
@@ -171,8 +171,10 @@ main {
 .collage-item:nth-child(4) img { object-position: center 25%; }
 .collage-item:nth-child(5) { grid-column: 9 / 13; grid-row: 4 / 6; }
 .collage-item:nth-child(6) { grid-column: 1 / 4; grid-row: 5 / 7; }
+.collage-item:nth-child(6) img { object-position: center bottom; }
 .collage-item:nth-child(7) { grid-column: 4 / 8; grid-row: 5 / 8; }
 .collage-item:nth-child(8) { grid-column: 8 / 13; grid-row: 6 / 8; }
+.collage-item:nth-child(9) { grid-column: 1 / 4; grid-row: 7 / 8; }
 
 /* Table of Contents */
 .toc {
@@ -888,6 +890,7 @@ footer {
     .collage-item:nth-child(6) { grid-column: 1 / 3; grid-row: 6 / 8; }
     .collage-item:nth-child(7) { grid-column: 3 / 5; grid-row: 6 / 8; }
     .collage-item:nth-child(8) { grid-column: 5 / 7; grid-row: 6 / 8; }
+    .collage-item:nth-child(9) { grid-column: 1 / 3; grid-row: 8 / 9; }
 }
 
 @media (max-width: 600px) {
@@ -918,6 +921,7 @@ footer {
     .collage-item:nth-child(6) { grid-column: 3 / 5; grid-row: 5 / 6; }
     .collage-item:nth-child(7) { grid-column: 1 / 3; grid-row: 6 / 8; }
     .collage-item:nth-child(8) { grid-column: 3 / 5; grid-row: 6 / 8; }
+    .collage-item:nth-child(9) { grid-column: 1 / 3; grid-row: 8 / 9; }
 
     .about-item p {
         font-size: 1.25rem;
